# drf-directmessages

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
directmessages/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
directmessages/migrations/: 0002_alter_message_sent_at.py  0003_message_hidden_for_recipient_and_more.py
tests/: settings.py  test_directmessages.py  test_schema.py
