[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drf-directmessages"
version = "0.10.0"
description = "A small, lightweight REST endpoint for direct messaging between users."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "Garreth Cain", email = "garrethccain@gmail.com" }]
keywords = ["django", "drf", "direct-messages", "messaging", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["django>=4.2", "djangorestframework>=3.14"]

[project.urls]
Homepage = "https://github.com/garrethcain/drf-directmessages"
Repository = "https://github.com/garrethcain/drf-directmessages"





[dependency-groups]
dev = ["pytest>=8.0", "pytest-django>=4.8", "drf-spectacular>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["directmessages"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.semantic_release]
version_variables = ["directmessages/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version}"
