[metadata]
name = drf-directmessages
version = 0.0.1
description = A package exposing a direct messaging framework via API.
long_description = file: README.MD
long_description_content_type = text/markdown
readme = "README.MD"
url = https://github.com/garrethcain/drf-directmessages
author = Garreth Cain
author_email = garrethccain@gmail.com
license = AGPL-3
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    djangorestframework >= 3.12.4
    # requests >= 2.24.0
